--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     }
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^2.2.7",
-    "lerna": "^3.13.0",
-    "polyserve": "^0.27.15",
-    "browser-sync": "^2.26.3"
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "browser-sync": "^2.26.3",
+    "lerna": "^3.13.4",
+    "polyserve": "^0.27.15"
   },
   "keywords": [
     "slideshow",
