Moves `browser-sync` package from devDependencies to peerDependencies
(removes security alert for vulnerability CVE-2019-10742 from this repository and removes the requirement to depend on `browser-sync` package, for those not using it)

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "browser-sync": "^2.26.5",
     "lerna": "^3.14.1",
     "polyserve": "^0.27.15"
+  },
+  "peerDependencies": {
+    "browser-sync": "^2.26.5"
   },
   "keywords": [
     "slideshow",
